--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -1,16 +1,17 @@
 .searchForm {
     color: black; 
-    width: 353px;
+    width: 380px;
     height: 59px;
     border: none;
-    margin-top: 5px;
+    margin-top: 20px;
     padding: 10px;
     border-radius: 30px 0px 0px 30px;
     outline: none;
+    text-align: left;
 }
 
 .searchButton {
-    margin-top: 5px;
+    margin-top: 20px;
     width: 50px;
     height: 59px;
     border: none;
@@ -19,8 +20,7 @@
     color: #eeeeee;
     border-radius: 0 30px 30px 0;
     cursor: pointer;
-    font-size: 20px;
-    }
+}
 
 
 
